# HacktoberFest

./: CONTRIBUTING.md  LICENSE  Quering in documentation in c  README.md  bouncing ball throught html css  guess_the_number.java  index.html  package-lock.json  style.css
Arduino-ESP/: DHT22.ino  Distance Detecting.docx  Light_Follower_Using_Arduino.ino  Line_Counter.ino  Smart_Bin.ino  clock_counter.v  read_distance_ultrasonic-sensor.ino
Data Structures and Coding Algorithm/: README.md  merge.c
Data Structures and Coding Algorithm/01. Array - Sort,Search,Algo/: Array_diff_arrangement.cpp  Union.cpp  kth_missing_number.cpp  largest_bst_in_BT.cpp  maximum_points.cpp  search_algorithms.cpp  sort.cpp  sorting_algorithms.cpp  unique_sets.cpp  whdbebc.cpp
Data Structures and Coding Algorithm/02. Linked List/: circular_execution.cpp  delete_node_atposition_itself.cpp  intersectionpointof2LL.cpp  reverse_linked_list_in_k_groups.cpp  swap_nodes_of_LL_without_swapping_data.cpp
Data Structures and Coding Algorithm/03. Stack/: Stack_sort_using_another_stack.cpp  (+6 more)
Django/: README.md  models.py
Flutter/: README.md
Git/: README.md  beginners.md  git_commands.md  terminal_beginners.md
JavaScript/: Intractive Video - Youtube IFrame Player API  README.md  index.html
Python/: Blur Algorithm.ipynb  Built funtions in python  PIL Scramble Image.ipynb  README.md
Python/HarshNavdhare_infinity-plus/: pyproject.toml  requirements.txt
Python/HarshNavdhare_infinity-plus/app/: app.py  db.py  models.py  users.py
ReactJS/: README.md
html-css/: infinity-dot.css  infinity-dot.html
(+326 files in other folders)
